--- a/web_integration/templates/starter-kit.html
+++ b/web_integration/templates/starter-kit.html
@@ -9,4 +9,13 @@
         </div>
     </div>
 </div>
+<div class="row">
+    <div class="col-12">
+        <div class="card">
+            <div class="card-body">
+                This is some text within a card block.
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock content %}
