--- a/web_integration/templates/layout.html
+++ b/web_integration/templates/layout.html
@@ -9,10 +9,10 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <!-- Favicon icon -->
-    <link rel="icon" type="image/png" sizes="16x16" href="static/assets/images/favicon.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="{{url_for('static', filename='assets/images/favicon.png')}}">
     <title>{{ title }}</title>
     <!-- Custom CSS -->
-    <link href="static/dist/css/style.min.css" rel="stylesheet">
+    <link href="{{url_for('static', filename='/dist/css/style.min.css')}}" rel="stylesheet">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -54,17 +54,17 @@
                             <b class="logo-icon">
                                 <!--You can put here icon as well // <i class="wi wi-sunset"></i> //-->
                                 <!-- Dark Logo icon -->
-                                <img src="static/assets/images/logo-icon.png" alt="homepage" class="dark-logo" />
+                                <img src="{{url_for('static', filename='assets/images/logo-icon.png')}}" alt="homepage" class="dark-logo" />
                                 <!-- Light Logo icon -->
-                                <img src="static/assets/images/logo-light-icon.png" alt="homepage" class="light-logo" />
+                                <img src="{{url_for('static',filename='assets/images/logo-light-icon.png')}}" alt="homepage" class="light-logo" />
                             </b>
                             <!--End Logo icon -->
                             <!-- Logo text -->
                             <span class="logo-text">
                                 <!-- dark Logo text -->
-                                <img src="static/assets/images/logo-text.png" alt="homepage" class="dark-logo" />
+                                <img src="{{url_for('static', filename='assets/images/logo-text.png')}}" alt="homepage" class="dark-logo" />
                                 <!-- Light Logo text -->
-                                <img src="static/assets/images/logo-light-text.png" class="light-logo" alt="homepage" />
+                                <img src="{{url_for('static', filename='assets/images/logo-light-text.png')}}" class="light-logo" alt="homepage" />
                             </span>
                         </a>
                     </div>
@@ -115,7 +115,7 @@
                         <!-- User profile and search -->
                         <!-- ============================================================== -->
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle text-muted waves-effect waves-dark pro-pic" href="" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><img src="static/assets/images/users/1.jpg" alt="user" class="rounded-circle" width="31"></a>
+                            <a class="nav-link dropdown-toggle text-muted waves-effect waves-dark pro-pic" href="" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><img src="{{url_for('static', filename='assets/images/users/1.jpg')}}" alt="user" class="rounded-circle" width="31"></a>
                             <div class="dropdown-menu dropdown-menu-right user-dd animated">
                                 <a class="dropdown-item" href="javascript:void(0)"><i class="ti-user m-r-5 m-l-5"></i> My Profile</a>
                                 <a class="dropdown-item" href="javascript:void(0)"><i class="ti-wallet m-r-5 m-l-5"></i> My Balance</a>
@@ -240,18 +240,18 @@
     <!-- ============================================================== -->
     <!-- All Jquery -->
     <!-- ============================================================== -->
-    <script src="static/assets/libs/jquery/dist/jquery.min.js"></script>
-    <!-- Bootstrap tether Core JavaScript -->
-    <script src="static/assets/libs/popper.js/dist/umd/popper.min.js"></script>
-    <script src="static/assets/libs/bootstrap/dist/js/bootstrap.min.js"></script>
-    <!-- slimscrollbar scrollbar JavaScript -->
-    <script src="static/assets/extra-libs/sparkline/sparkline.js"></script>
-    <!--Wave Effects -->
-    <script src="static/dist/js/waves.js"></script>
-    <!--Menu sidebar -->
-    <script src="static/dist/js/sidebarmenu.js"></script>
-    <!--Custom JavaScript -->
-    <script src="static/dist/js/custom.min.js"></script>
+    <script src="{{url_for('static', filename='assets/libs/jquery/dist/jquery.min.js')}}"></script>
+    
+    <script src="{{url_for('static', filename='assets/libs/popper.js/dist/umd/popper.min.js')}}"></script>
+    <script src="{{url_for('static', filename='assets/libs/bootstrap/dist/js/bootstrap.min.js')}}"></script>
+    
+    <script src="{{url_for('static', filename='assets/extra-libs/sparkline/sparkline.js')}}"></script>
+    
+    <script src="{{url_for('static', filename='dist/js/waves.js')}}"></script>
+    
+    <script src="{{url_for('static', filename='dist/js/sidebarmenu.js')}}"></script>
+    
+    <script src="{{url_for('static', filename='dist/js/custom.min.js')}}"></script>
 </body>
 
 </html>
