--- a/web_integration/templates/patient.html
+++ b/web_integration/templates/patient.html
@@ -10,9 +10,8 @@
         <div class="col-lg-4 col-xlg-3 col-md-5">
             <div class="card">
                 <div class="card-body">
-                    <center class="m-t-30"> <img src="{{url_for('static',filename='assets/images/users/5.jpg')}}" class="rounded-circle" width="150">
-                        <h4 class="card-title m-t-10">Hanna Gover</h4>
-                        <h6 class="card-subtitle">Accoubts Manager Amix corp</h6>
+                    <center class="m-t-30"> <img id="profile_pic" src="{{rest_link}}/patients/{{patient_data['id']}}/pic" class="rounded-circle" width="150">
+                        <h4 class="card-title m-t-10">{{patient_data['name']}} {{patient_data['surname']}}</h4>
                         <div class="row text-center justify-content-md-center">
                             <div class="col-4"><a href="javascript:void(0)" class="link"><i class="icon-people"></i> <font class="font-medium">254</font></a></div>
                             <div class="col-4"><a href="javascript:void(0)" class="link"><i class="icon-picture"></i> <font class="font-medium">54</font></a></div>
@@ -22,16 +21,13 @@
                 <div>
                     <hr> </div>
                 <div class="card-body"> <small class="text-muted">Email address </small>
-                    <h6>hannagover@gmail.com</h6> <small class="text-muted p-t-30 db">Phone</small>
-                    <h6>+91 654 784 547</h6> <small class="text-muted p-t-30 db">Address</small>
-                    <h6>71 Pilgrim Avenue Chevy Chase, MD 20815</h6>
-                    <div class="map-box">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d470029.1604841957!2d72.29955005258641!3d23.019996818380896!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x395e848aba5bd449%3A0x4fcedd11614f6516!2sAhmedabad%2C+Gujarat!5e0!3m2!1sen!2sin!4v1493204785508" style="border:0" allowfullscreen="" width="100%" height="150" frameborder="0"></iframe>
-                    </div> <small class="text-muted p-t-30 db">Social Profile</small>
+                    <h6>{{patient_data['email']}}</h6> <small class="text-muted p-t-30 db">Phone</small>
+                    <h6>{{patient_data['phone']}}</h6> <small class="text-muted p-t-30 db">Address</small>
+                    <h6>{{adress}}</h6><small class="text-muted">Username</small>
+                    <h6>{{patient_data['username']}}</h6>
+                    <small class="text-muted">Signup Date </small>
+                    <h6>{{time_con(patient_data['signup_date'])}}</h6>
                     <br>
-                    <button class="btn btn-circle btn-secondary"><i class="mdi mdi-facebook"></i></button>
-                    <button class="btn btn-circle btn-secondary"><i class="mdi mdi-twitter"></i></button>
-                    <button class="btn btn-circle btn-secondary"><i class="mdi mdi-youtube-play"></i></button>
                 </div>
             </div>
         </div>
@@ -94,6 +90,11 @@
         </div>
         <!-- Column -->
     </div>
+    <script>
+    $('#profile_pic').on("error", function() {
+  $(this).attr('src', "{{url_for('static', filename='assets/images/users/4.jpg')}}");
+});
+    </script>
     <!-- Row -->
     <!-- ============================================================== -->
     <!-- End PAge Content -->
