--- a/web_integration/templates/patients.html
+++ b/web_integration/templates/patients.html
@@ -12,7 +12,7 @@
     {% for p in patient_list %}
     <a href="/patients/{{p['id']}}">
     <div class="d-flex flex-row comment-row mt-0">
-        <div class="p-2"><img src="static/assets/images/users/1.jpg" alt="user" width="50" class="rounded-circle"></div>
+        <div class="p-2"><img src="{{url_for('static', filename='assets/images/users/1.jpg')}}" alt="user" width="50" class="rounded-circle"></div>
         <div class="comment-text w-100">
             <h6 class="font-medium">{{ p['name'] }}</h6>
             <span class="mb-3 d-block">{{ p['surname'] }} </span>
