--- a/web_integration/templates/layout.html
+++ b/web_integration/templates/layout.html
@@ -12,7 +12,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="{{url_for('static', filename='assets/images/favicon.png')}}">
     <title>{{ title }}</title>
     <!-- Custom CSS -->
-    <link href="{{url_for('static', filename='/dist/css/style.min.css')}}" rel="stylesheet">
+    <link href="{{url_for('static', filename='dist/css/style.min.css')}}" rel="stylesheet">
     <script src="{{url_for('static', filename='assets/libs/jquery/dist/jquery.min.js')}}"></script>
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
