--- a/web_integration/templates/layout.html
+++ b/web_integration/templates/layout.html
@@ -204,6 +204,18 @@
             <div class="container-fluid">
                 <!-- ============================================================== -->
                 <!-- Start Page Content -->
+            {% with messages = get_flashed_messages(with_categories=true) %}
+            {% if messages %}
+              {% for category, message in messages %}
+                
+                <div class="alert alert-{{ category }} fade in alert-dismissable show">
+                  <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true" style="font-size:20pt">×</span></button>
+                  {{ message }}
+                </div>                  
+                
+              {% endfor %}
+            {% endif %}
+          {% endwith %}
                 <!-- ============================================================== -->
                 {% block content %}{% endblock content %}
                 <!-- ============================================================== -->
