--- a/web_integration/templates/patient.html
+++ b/web_integration/templates/patient.html
@@ -36,52 +36,36 @@
         <div class="col-lg-8 col-xlg-9 col-md-7">
             <div class="card">
                 <div class="card-body">
-                    <form class="form-horizontal form-material">
+                    <form class="form-horizontal form-material" method="POST" action="" enctype="multipart/form-data">
                         <div class="form-group">
                             <label class="col-md-12">Full Name</label>
                             <div class="col-md-12">
-                                <input type="text" placeholder="Johnathan Doe" class="form-control form-control-line">
+                                <input type="text" placeholder="Johnathan Doe" class="form-control form-control-line" name="name">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-md-12">Surname</label>
+                            <div class="col-md-12">
+                                <input type="text" placeholder="Johnathan Doe" class="form-control form-control-line" name="surname">
                             </div>
                         </div>
                         <div class="form-group">
                             <label for="example-email" class="col-md-12">Email</label>
                             <div class="col-md-12">
-                                <input type="email" placeholder="johnathan@admin.com" class="form-control form-control-line" name="example-email" id="example-email">
+                                <input type="email" placeholder="johnathan@admin.com" class="form-control form-control-line" name="email" id="example-email">
                             </div>
                         </div>
-                        <div class="form-group">
-                            <label class="col-md-12">Password</label>
-                            <div class="col-md-12">
-                                <input type="password" value="password" class="form-control form-control-line">
-                            </div>
-                        </div>
+
                         <div class="form-group">
                             <label class="col-md-12">Phone No</label>
                             <div class="col-md-12">
-                                <input type="text" placeholder="123 456 7890" class="form-control form-control-line">
+                                <input type="text" placeholder="123 456 7890" class="form-control form-control-line" name="phone">
                             </div>
                         </div>
-                        <div class="form-group">
-                            <label class="col-md-12">Message</label>
-                            <div class="col-md-12">
-                                <textarea rows="5" class="form-control form-control-line"></textarea>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label class="col-sm-12">Select Country</label>
-                            <div class="col-sm-12">
-                                <select class="form-control form-control-line">
-                                    <option>London</option>
-                                    <option>India</option>
-                                    <option>Usa</option>
-                                    <option>Canada</option>
-                                    <option>Thailand</option>
-                                </select>
-                            </div>
-                        </div>
+
                         <div class="form-group">
                             <div class="col-sm-12">
-                                <button class="btn btn-success">Update Profile</button>
+                                <input type="submit" class="btn btn-success" value="Update profile">
                             </div>
                         </div>
                     </form>
