--- a/web_integration/templates/doctor.html
+++ b/web_integration/templates/doctor.html
@@ -80,6 +80,50 @@
                         </div>
 
                         <div class="form-group">
+                            <label class="col-md-12">Experience</label>
+                            <div class="col-md-12">
+                                <input type="text" placeholder="2 years" class="form-control form-control-line" name="experience">
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <label class="col-md-12">specialization</label>
+                            <div class="col-md-12">
+                                <input type="text" placeholder="MBBS" class="form-control form-control-line" name="specialization">
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <label class="col-md-12">About</label>
+                            <div class="col-md-12">
+                                <textarea rows="5" class="form-control form-control-line" style="height: 161px;" name="about"></textarea>
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <label class="col-sm-12">Gender</label>
+                            <div class="col-sm-12">
+                                <select class="form-control form-control-line" name="gender">
+                                    <option disabled selected value> -- select an option -- </option>
+                                    <option>Male</option>
+                                    <option>Female</option>
+                                </select>
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <label class="col-sm-12">Verification</label>
+                            <div class="col-sm-12">
+                                <select class="form-control form-control-line" name="verification_status">
+                                    <option disabled selected value> -- select an option -- </option>
+                                    <option>Verified</option>
+                                    <option>Pending</option>
+                                    <option>Rejected</option>
+                                </select>
+                            </div>
+                        </div>
+
+                        <div class="form-group">
                             <div class="col-sm-12">
                                 <input type="submit" class="btn btn-success" value="Update profile">
                             </div>
