--- a/web_integration/templates/document.html
+++ b/web_integration/templates/document.html
@@ -1,18 +1,24 @@
 {% extends "layout.html" %}
 {% block content %}
 
+
     <!-- ============================================================== -->
     <!-- Start Page Content -->
     <!-- ============================================================== -->
     <!-- Row -->
+
+    <script src="{{url_for('static', filename='assets/libs/js-image-zoom.js')}}"></script>
+
     <div class="row">
         <!-- Column -->
         <div class="col-lg-4 col-xlg-3 col-md-5">
             <div class="card">
                 <div class="card-body">
-                    <div class="d-flex justify-content-center"> <img id="profile_pic" src="{{rest_link}}/documents/{{document_data['id']}}/pic" width="300">
-                       
+                <div id="image_container">
+                    <div class="d-flex justify-content-center">
+                        <img id="profile_pic" src="{{url_for('static', filename='assets/images/users/futa.jpg')}}" width="450">
                     </div>
+                </div>
                 </div>                
             </div>
         </div>
@@ -21,20 +27,65 @@
         <div class="col-lg-8 col-xlg-9 col-md-7">
             <div class="card">
                 <div class="card-body">
-                    <small class="text-muted">Email address </small>
-                    <h6>placeholder@yahoo.com</h6>
-                    <small class="text-muted">Gender </small>
-                    <h6>female</h6> <small class="text-muted p-t-30 db">Phone</small>
-                    <h6>123456 789</h6> <small class="text-muted">Username</small>
-                    <h6>babadingoo</h6>
-                    <small class="text-muted">Signup Date </small>
-                    <h6>10-10-2020</h6>
+                    <small class="text-muted">Title</small>
+                    <h6>{{document_data['title']}}</h6>
+                    <small class="text-muted">Description</small>
+                    <h6>{{ document_data['description'] }}</h6> 
+                    <small class="text-muted p-t-30 db">Owner</small>
+                    <a href="{{ url_for('doctor', doctor_id=document_data['owner']) }}"><h6>{{ document_data['owner_name'] }}</h6></a>
+                    <small class="text-muted">Organization</small>
+                    <h6>{{ document_data['issued_by_org'] }}</h6>
+                    <small class="text-muted">Issue Date</small>
+                    <h6>{{ time_con(document_data['issued_date']) }}</h6>
+                    <small class="text-muted">Verification Status</small>
+                    <h6>{{ document_data['verification_status'] }}</h6>
+                    <small class="text-muted">Verification Date</small>
+                    <h6>{{ time_con(document_data['verification_date']) }}</h6>
+                    <small class="text-muted">Rejection Cause</small>
+                    <h6>{{ document_data['rejection_cause'] }}</h6>
+                    <form class="form-horizontal form-material" method="POST" action="" enctype="multipart/form-data">
+                        <div class="form-group">
+                            <label class="col-sm-12">Verification</label>
+                            <div class="col-sm-12">
+                                <select class="form-control form-control-line" name="verification_status">
+                                    <option disabled selected value> -- select an option -- </option>
+                                    <option>Verified</option>
+                                    <option>Pending</option>
+                                    <option>Rejected</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-md-12">Rejection Cause</label>
+                            <div class="col-md-12">
+                                <textarea rows="5" class="form-control form-control-line" style="height: 161px;" name="rejection_cause"></textarea>
+                            </div>
+                        </div>
+                        <input id="hidden_date" type="hidden" value="" name="verification_date">
+                        <div class="form-group">
+                            <div class="col-sm-12">
+                                <input type="submit" class="btn btn-success" value="Update">
+                            </div>
+                        </div>
+                        
+                    </form>
                     <br>
                 </div>
             </div>
         </div>
 
     </div>
+
+
+
+    <script>
+        function get_currentDate(){
+            
+            var date = new Date();
+            document.getElementById("hidden_date").value = date.toUTCString();
+        }
+        get_currentDate();
+    </script>
     <script>
     $('#profile_pic').on("error", function() {
   $(this).attr('src', "{{url_for('static', filename='assets/images/users/futa.jpg')}}");
