--- a/web_integration/templates/document.html
+++ b/web_integration/templates/document.html
@@ -16,7 +16,7 @@
                 <div class="card-body">
                 <div id="image_container">
                     <div class="d-flex justify-content-center">
-                        <img id="profile_pic" src="{{url_for('static', filename='assets/images/users/futa.jpg')}}" width="450">
+                        <img id="profile_pic" src="{{rest_link}}/documents/{{document_data['id']}}/pic" width="450">
                     </div>
                 </div>
                 </div>                
@@ -88,7 +88,7 @@
     </script>
     <script>
     $('#profile_pic').on("error", function() {
-  $(this).attr('src', "{{url_for('static', filename='assets/images/users/futa.jpg')}}");
+  $(this).attr('src', "{{url_for('static', filename='assets/images/users/sadjuice.jpg')}}");
 });
     </script>
     <!-- Row -->
